Added mention of daily quests starting at 90

--- a/sidebar.html
+++ b/sidebar.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-17 Fri 15:54 -->
+<!-- 2022-06-24 Fri 20:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Navigation</title>
@@ -218,6 +218,7 @@
 <li><a href="./guides/">Guides</a>
 <ul class="org-ul">
 <li><a href="./guides/builds.html">Builds</a></li>
+<li><a href="./guides/dailes.html">Daily Quests</a></li>
 <li><a href="./guides/luckyhouse.html">Lucky House</a></li>
 <li><a href="./guides/enhacement.html">Enhancement</a></li>
 <li><a href="./guides/lvling">Leveling</a>
