--- a/guides/index.html
+++ b/guides/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-17 Fri 16:01 -->
+<!-- 2022-06-24 Fri 20:30 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides</title>
@@ -243,6 +243,7 @@ Welcome to my guides to Fiesta Online. I mostly just wrote these for me and my f
 </p>
 <ol class="org-ol">
 <li><a href="builds.html">Builds</a></li>
+<li><a href="./dailes.html">Daily Quest</a></li>
 <li><a href="luckyhouse.html">Lucky House</a></li>
 <li><a href="enhacement.html">Enchancment</a></li>
 <li><a href="lvling/">Leveling</a>
