--- a/guides/lvling/fledgling.html
+++ b/guides/lvling/fledgling.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-20 Mon 20:39 -->
+<!-- 2022-06-24 Fri 20:32 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Fledgling Adventurer</title>
@@ -308,6 +308,7 @@ is nice because you can level while you AFK like in FM, but it can be
 expansive because runners don&rsquo;t run it for free, usually.</li>
 <li>Alternatively, there is a non-LN strategy that is not as easy and is
 a bit slower, but more than doable.</li>
+<li>Also, at this point you may begin to do <a href="../dailes.html">daily quests</a> from the Hunter&rsquo;s Union. These will allow you to earn tokens to exchange for items <i>and</i> give you a bit of exp every day!</li>
 </ol>
 </div>
 
