Made another rep update!
Change fledgling adventurer guide to reflect efforts repeatables easier.
This time we acknowledge the once hated mandrake rep!

--- a/guides/lvling/fledgling.html
+++ b/guides/lvling/fledgling.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-24 Fri 20:32 -->
+<!-- 2022-06-27 Mon 20:48 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Fledgling Adventurer</title>
@@ -321,8 +321,7 @@ Cave&rdquo;&gt;&ldquo;Burning Cave 2&rdquo; to unlock &ldquo;My hunches never pr
 Rock Stone is also hard to kill for someone at this level, but I love
 killing RS so just get <a href="https://forums.onigirionegai.info/viewforum.php?f=3">in-touch with me</a>, or you can have another high
 level guildie or friend kill it for you while you turn in the rep.</li>
-<li>Level 94-95 - Do all the non-repeatable quests you have other than
-the 94s</li>
+<li>Level 94-95 - Mandrake Rep - &ldquo;Outlaw of the Swamp (Repeatable)&rdquo; - 15 Kill per turn in now! Much better than doing all the other quests, but you <i>could</i> still do those if you want.</li>
 <li>Level 96-97 - King Rhino Rep - &ldquo;The Threats of King Rhinoce&rdquo; - Pretty
 easy mini-boss, may even be able to solo him, but a higher level
 killer is faster.</li>
