Changed Fiesta Wiki link to work around issue #26
Also changed some text that referred to old cap level

--- a/guides/lvling/fledgling.html
+++ b/guides/lvling/fledgling.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-27 Mon 20:48 -->
+<!-- 2022-06-27 Mon 20:53 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Fledgling Adventurer</title>
@@ -436,9 +436,9 @@ I&rsquo;ve learned something just recently. There are a quite a few quests that 
 <h3 id="congrats">Congrats</h3>
 <div class="outline-text-3" id="text-congrats">
 <p>
-You are now a bone-fide adventurer. You are only 15 levels away from
-cap, so keep it up! As always, you can visit the
-<a href="http://fiesta-wiki.com/quests/8">Fiesta Wiki</a> for more information on
+You are now a bone-fide adventurer. You are still 20 levels away from
+cap, but keep it up! As always, you can visit the
+<a href="http://fiesta-wiki.com/">Fiesta Wiki</a> for more information on
 any of the quests above.
 </p>
 
