--- a/guides/lvling/newblets.html
+++ b/guides/lvling/newblets.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-17 Fri 10:50 -->
+<!-- 2022-06-30 Thu 20:21 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Newblets</title>
@@ -219,13 +219,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/FOGlyphmerge1.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/OgreDungeon_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">New Launcher!</h1>
-          <p class="text-center">Find all the information of our move here!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/new_launcher-955" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">Name Reveal: Night Stalkers Hideout</h1>
+          <p class="text-center">Coming Soon!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/name_reveal_night_stalkers_hideout-796" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
