Added mention of Ping Pig Horn rep

--- a/guides/lvling/fledgling.html
+++ b/guides/lvling/fledgling.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-30 Thu 20:21 -->
+<!-- 2022-07-02 Sat 20:50 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Fledgling Adventurer</title>
@@ -325,7 +325,7 @@ level guildie or friend kill it for you while you turn in the rep.</li>
 <li>Level 96-97 - King Rhino Rep - &ldquo;The Threats of King Rhinoce&rdquo; - Pretty
 easy mini-boss, may even be able to solo him, but a higher level
 killer is faster.</li>
-<li>Level 98 - do all the 9x quests to get you to 99</li>
+<li>Level 98 - do all the 9x quests to get you to 99, if you&rsquo;re having difficulty reaching 99 even with <a href="../dailes.html">daily quest</a> and these normal quests, there is also the Ping Pig Horn rep - &ldquo;Food Thief&rdquo;, but this is a drop quest and can be difficult to in a party, so it is <i>not</i> recommended.</li>
 <li>Level 99-101 - Slugs rep - &ldquo;Personal Revenge&rdquo;</li>
 <li>Level 101-104 - Mad slugs rep - &ldquo;Suspicious Big Mudmen&rdquo;&gt;&ldquo;Fire on
 Hands and Feet&rdquo;&gt;&ldquo;Unextinguishable Fire&rdquo;</li>
