Updated a few links
I updated all links back to the leveling guides to return user to the
level guide index and changed all fiesta wiki links to link to the home
page to workaround issue #26

--- a/guides/index.html
+++ b/guides/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-30 Thu 20:21 -->
+<!-- 2022-07-08 Fri 10:33 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides</title>
@@ -246,7 +246,7 @@ Welcome to my guides to Fiesta Online. I mostly just wrote these for me and my f
 <li><a href="./dailes.html">Daily Quest</a></li>
 <li><a href="luckyhouse.html">Lucky House</a></li>
 <li><a href="enhacement.html">Enchancment</a></li>
-<li><a href="lvling/">Leveling</a>
+<li><a href="lvling/">Leveling</a> (Note: this is the lazy way!)
 <ol class="org-ol">
 <li><a href="lvling/babies.html">Babies</a> (levels 1-40)</li>
 <li><a href="lvling/newblets.html">Newblets</a> (41-80)</li>
