--- a/guides/lvling/babies.html
+++ b/guides/lvling/babies.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-30 Thu 20:21 -->
+<!-- 2022-07-08 Fri 10:33 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Babies</title>
@@ -301,7 +301,7 @@ after completing Bone Imp bags 2</li>
 <p>
 Those were not all the repeatable quests and you probably won&rsquo;t need to
 complete a majority of them to reach level 40. For more information on
-quests you can visit the <a href="http://fiesta-wiki.com/quests/0">Fiesta
+quests you can visit the <a href="http://fiesta-wiki.com">Fiesta
 Wiki</a>. This will also help you complete pre-requisite quests for some
 of the reps above. Once your baby hits level 40 it is time for the Tower
 of Iyzel. Just because they are level 40, however, doesn&rsquo;t mean that can
