--- a/guides/lvling/fledgling.html
+++ b/guides/lvling/fledgling.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-07-02 Sat 20:50 -->
+<!-- 2022-07-08 Fri 10:33 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Fledgling Adventurer</title>
@@ -239,7 +239,7 @@ Footer" />
 <h2 id="leveling-your-fledgling-adventurer-level-81-120">Leveling Your Fledgling Adventurer (level 81-120)</h2>
 <div class="outline-text-2" id="text-leveling-your-fledgling-adventurer-level-81-120">
 <p>
-If you have followed my <a href="newblets.html">guides</a> so
+If you have followed my <a href="./">guides</a> so
 far then you&rsquo;ll be level 81 in no time, especially if you were power
 leveled. Things will start to go really fast or depressingly slow
 depending on the guild you are in, the money you have amassed, or the
