--- a/guides/lvling/gods.html
+++ b/guides/lvling/gods.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-30 Thu 20:21 -->
+<!-- 2022-07-08 Fri 10:33 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your God-like Adventurers</title>
@@ -239,7 +239,7 @@ Footer" />
 <h2 id="leveling-your-god-like-adventurer-level-136-140">Leveling Your God-like Adventurers (level 136-140)</h2>
 <div class="outline-text-2" id="text-leveling-your-god-like-adventurer-level-136-140">
 <p>
-When I first wrote my last <a href="adventurer.html">guide</a> the level cap was actually 135 so I said congratulations now figure out what to do next. Well cap is 140 now so I guess it&rsquo;s time for an update to the guide 😉. Sadly progress is slow and you know longer have any KQs to help you out. So, mayhap, you really don&rsquo;t want to try, but in case you think capping might be cool, here&rsquo;s some ideas of what you can do. The same caveat exists with this guide as with the last one. My current highest level character is only 133, so I have <i>not</i> tried any of these suggestions. If you would do try them let me know in the <a href="http://forums.onigirionegai.info/viewforum.php?f=3">forums</a> if they work for you, or let me know if you have other suggestions!
+When I first wrote my last <a href="./">guide</a> the level cap was actually 135 so I said congratulations now figure out what to do next. Well cap is 140 now so I guess it&rsquo;s time for an update to the guide 😉. Sadly progress is slow and you know longer have any KQs to help you out. So, mayhap, you really don&rsquo;t want to try, but in case you think capping might be cool, here&rsquo;s some ideas of what you can do. The same caveat exists with this guide as with the last one. My current highest level character is only 133, so I have <i>not</i> tried any of these suggestions. If you would do try them let me know in the <a href="http://forums.onigirionegai.info/viewforum.php?f=3">forums</a> if they work for you, or let me know if you have other suggestions!
 </p>
 </div>
 <div id="outline-container-dailies-dailies-dailies-and-more-dailies" class="outline-3">
@@ -274,7 +274,7 @@ There are new reps for you to complete as well. Well a couple anyway.
 <h3 id="orgeb1a654">Questing</h3>
 <div class="outline-text-3" id="text-orgeb1a654">
 <p>
-The <a href="http://fiesta-wiki.com/quests/13">fiesta wiki</a> offers a few options for quests for this level range. It has been recommended to relay on dailies and reps until at least 139. This will allow you to save your quests for when normal quests are suuuper in-effective, and hopefully make that last level just a little faster.
+The <a href="http://fiesta-wiki.com">fiesta wiki</a> offers a few options for quests for this level range. It has been recommended to relay on dailies and reps until at least 139. This will allow you to save your quests for when normal quests are suuuper in-effective, and hopefully make that last level just a little faster.
 </p>
 </div>
 </div>
