--- a/guides/lvling/index.html
+++ b/guides/lvling/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-30 Thu 20:21 -->
+<!-- 2022-07-08 Fri 10:33 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling</title>
@@ -239,7 +239,7 @@ Footer" />
 <h2 id="org654a8ec">Leveling Guides</h2>
 <div class="outline-text-2" id="text-org654a8ec">
 <p>
-Welcome to my leveling guides to Fiesta Online. This is just a parsed down version of my main <a href="../">guide</a> index. It is mostly here for constancy, but, hey, maybe you want just this list, lol.
+Welcome to my leveling guides to Fiesta Online. This is just a parsed down version of my main <a href="../">guide</a> index. It is mostly here for constancy, but, hey, maybe you want just this list, lol. Also I warning about this guide! This represents the laziest and possibly easiest way to level. By no means is this the most fun or even fastest way. To be honest there are plenty of quests especially for early levels and those are usually the fastest. I also don&rsquo;t mention KQs which often give a lot of experience and other rewards, but can only be done at certain times. Anyway, if you wanna level easily follow this guide, otherwise, why not just quest? Check out the <a href="http://fiesta-wiki.com">Fiesta Wiki</a> for more information!
 </p>
 <ol class="org-ol">
 <li><a href="babies.html">Babies</a> (levels 1-40)</li>
