--- a/guides/lvling/adventurer.html
+++ b/guides/lvling/adventurer.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-30 Thu 20:21 -->
+<!-- 2022-07-08 Fri 10:33 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Bone-fide Adventurer</title>
@@ -239,7 +239,7 @@ Footer" />
 <h2 id="leveling-your-bone-fide-adeventurer-level-121-cap">Leveling Your Bone-fide Adventurer (Level 121-135)</h2>
 <div class="outline-text-2" id="text-leveling-your-bone-fide-adeventurer-level-121-cap">
 <p>
-After following <a href="fledgling.html">my guide</a> thus far
+After following <a href="./">my guide</a> thus far
 you&rsquo;ll notice that trying to do things solo from this point on is really
 hard if not impossible unless you pray really hard to the Gamigo Gods
 and give them plenty of offerings (by purchasing SC) 😅 So, hopefully,
@@ -286,7 +286,7 @@ There are actually quite a few reps here, including one that a lot of
 people will probably tell you about where you just go and gather a
 special type of wood. This rep is slow, very slow, without droppers and
 the rest of the reps are also pretty slow, so you can look em up in the
-<a href="http://fiesta-wiki.com/quests/12">Fiesta Wiki</a> if you&rsquo;d like, but I prefer to just run around and
+<a href="http://fiesta-wiki.com">Fiesta Wiki</a> if you&rsquo;d like, but I prefer to just run around and
 quest here. There are lots of quests you have saved to this point and
 they should be more than enough to get you to 125. Also, there is the
 Bajou Sancturary KQ, so that can help.
