Weekly news refresh!

--- a/adventures/where.html
+++ b/adventures/where.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-07-08 Fri 10:33 -->
+<!-- 2022-07-08 Fri 10:38 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Adventures - Where's Yayoi!?</title>
@@ -219,13 +219,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/OgreDungeon_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/communityletterNA_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">Name Reveal: Night Stalkers Hideout</h1>
-          <p class="text-center">Coming Soon!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/name_reveal_night_stalkers_hideout-796" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">Community Letter: July</h1>
+          <p class="text-center">Community Letter</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/community_letter_july-883" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
